--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,13 @@
       <artifactId>swing-layout</artifactId>
       <version>1.0.3</version>
     </dependency>
+    <!-- filedrop dependency -->
+    <dependency>
+      <groupId>org.iharder</groupId>
+      <artifactId>filedrop</artifactId>
+      <version>1.1</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/filedrop.jar</systemPath>
+    </dependency>
   </dependencies>
 </project>
